--- a/package.json
+++ b/package.json
@@ -20,58 +20,60 @@
     "piskel-root": "./misc/scripts/piskel-root",
     "piskel-cli": "./cli/index.js"
   },
-  "main": "./dest/prod/index.html",
+  "main": "./index.html",
   "scripts": {
     "test": "grunt test",
     "dev": "grunt play",
-    "start": "grunt build && nw",
+    "build": "grunt build",
     "preversion": "grunt test build",
     "postversion": "git push && git push --tags && npm publish",
     "release": "grunt && node ./bin/copy-to-piskel-website",
-    "build": "grunt desktop",
-    "build:mac": "grunt desktop-mac",
+    "desktop:run": "grunt desktop-run",
+    "desktop:build": "grunt desktop-build",
     "format": "grunt eslint --fix"
   },
   "devDependencies": {
-    "dateformat": "4.5.1",
-    "fs-extra": "10.0.0",
-    "grunt": "1.4.1",
-    "grunt-casperjs": "^2.2.1",
-    "grunt-cli": "^1.4.3",
-    "grunt-contrib-clean": "2.0.0",
-    "grunt-contrib-concat": "1.0.1",
+    "@chiragrupani/karma-chromium-edge-launcher": "2.2.2",
+    "date-fns": "2.29.2",
+    "fs-extra": "10.1.0",
+    "grunt": "1.5.3",
+    "grunt-casperjs": "2.2.1",
+    "grunt-cli": "1.4.3",
+    "grunt-contrib-clean": "2.0.1",
+    "grunt-contrib-concat": "2.1.0",
     "grunt-contrib-connect": "3.0.0",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-jshint": "3.0.0",
-    "grunt-contrib-uglify": "5.0.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "23.0.0",
+    "grunt-contrib-jshint": "3.2.0",
+    "grunt-contrib-uglify": "5.2.2",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-eslint": "24.0.0",
     "grunt-include-replace": "5.0.0",
-    "grunt-jscs": "3.0.1",
     "grunt-karma": "4.0.2",
     "grunt-leading-indent": "0.2.0",
-    "grunt-nw-builder": "3.1.0",
+    "grunt-nw-builder": "3.8.2",
     "grunt-replace": "2.0.2",
-    "grunt-spritesmith": "^6.9.0",
-    "jasmine-core": "3.8.0",
-    "karma": "6.3.4",
-    "karma-jasmine": "4.0.1",
+    "grunt-spritesmith": "6.10.0",
+    "jasmine-core": "4.3.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-firefox-launcher": "2.1.2",
+    "karma-jasmine": "5.1.0",
     "karma-phantomjs-launcher": "1.0.4",
     "load-grunt-tasks": "5.1.0",
-    "nw": "0.54.0",
-    "phantomjs": "2.1.7",
     "phantomjs-polyfill-object-assign": "0.0.2",
-    "promise-polyfill": "8.2.0",
+    "phantomjs-prebuilt": "2.1.16",
+    "promise-polyfill": "8.2.3",
+    "puppeteer": "17.0.0",
     "rmdir": "1.2.0"
   },
   "window": {
     "title": "Piskel",
-    "icon": "dest/prod/logo.png",
+    "icon": "./logo.png",
     "toolbar": false,
     "width": 1000,
     "height": 700
   },
   "dependencies": {
-    "minimist": "^1.2.5"
+    "minimist": "1.2.6"
   }
 }
